# forensicface

./: .gitattributes  .gitignore  00_forensicface.html  01_utils.html  LICENSE  README.md  THIRD_PARTY_NOTICES.md  _quartodoc.yml  api.html  det_size.html  exemplo-teste_jpnotebook.ipynb  exemplo_teste.py  forensicface.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html
_api/: ort_runtime_setup.qmd  runtime_summary.qmd
_docs/: 00_forensicface.html  01_utils.html  api.html  det_size.html  forensicface.html  index.html  search.json  sitemap.xml
_proc/: 00_forensicface.ipynb  01_utils.ipynb  index.ipynb  logo-policia_federal.png_Zone.Identifier  nbdev.yml  sidebar.yml  sidebar.yml.bak
api/: app.html  backends.html  geometry.html  index.html  insightface.attribute.html  insightface.face_align.html  insightface.landmark.html  insightface.meanshape68.html  insightface.scrfd.html  insightface.transform.html  model_store.html  mosaic.html  ort_runtime_setup.html  preprocessing.html  recognition.html  results.html  runtime_summary.html  utils.html  video.html
docs/: README.md  architecture.md  extending-models.md  extensible-models-plan.md  simplification-plan.md
forensicface/: _modidx.py  app.py  forensicface.py  utils.py
nbs/: 00_forensicface.ipynb  01_cosine.ipynb  01_utils.ipynb  _quarto.yml  api.qmd  det_size.qmd  index.ipynb  nbdev.yml  objects.json
scripts/: build_docs.sh  build_docs_ci.sh  process_face_full_output.py  process_image_demo.py
tests/: test_backends_and_api.py  test_batch_api.py  test_helper_modules.py  (+4 more)
(+123 files in other folders)
